# postloop

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  deploy.toml.example
docs/: intent-registry-design.md  refactoring-suggestions.md  zene-integration-requirements.md
examples/: case-002-external-api-gateway.md
intents/: case-gh-agent-task-001.md
src/: builder.rs  config.rs  deployer.rs  hook.rs  intent.rs  lib.rs  logger.rs  main.rs  registry.rs  rollback.rs  syncer.rs
tests/: config_test.rs
