[package]
name = "ploop"
version = "0.1.2"
edition = "2021"
description = "Post-commit Loop - Local Git auto-deployment tool"
license = "MIT"
repository = "https://github.com/lipish/ploop"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
env_logger = "0.11"
log = "0.4"

[lib]
name = "ploop"
path = "src/lib.rs"

[[bin]]
name = "ploop"
path = "src/main.rs"
