[package]
name = "intentloop"
version = "0.1.2"
edition = "2021"
description = "IntentLoop Lite - local agent session recorder"
license = "MIT"
repository = "https://github.com/lipish/intentloop"

[features]
default = []
zene = ["dep:zene"]

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "v7"] }
portable-pty = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
dotenvy = "0.15"
zene = { path = "../zene", optional = true }

[lib]
name = "intentloop"
path = "src/lib.rs"

[[bin]]
name = "intentloop"
path = "src/main.rs"
